--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <title>JS</title>
 </head>
 <body>
-  
-
-
-  <script src="task1.js"></script>
-  <script src="task2.js"></script>
+  <script src="js/task1.js"></script>
+  <script src="js/task2.js"></script>
+  <script src="js/task3.js"></script>
+  <script src="js/task4.js"></script>
+  <script src="js/task5.js"></script>
 </body>
 </html>
